--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    padding: 0;
+    font-family:  sans-serif;
+    background-size: 100%;
+    background-position: bottom;
+    background-color: #95e8f3
+  
 }
 
 code {
