--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -1,22 +1,36 @@
 .navbar{
-    position: fixed;
     display: flex;
     top: 0;
-    width: 100%;
-    background: rgba(0, 0, 0, 0.424);
-    z-index: 1;
+    margin: 0;
+    padding: 0;
+    background: rgb(165, 3, 3);
   }
 
-  .nav-link{
-    word-spacing: 2px;
-    padding: 0.75rem 2rem;
+  .nav{
+    display: flex;
+    position: relative;
+    text-transform: capitalize;
+    row-gap: 2rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+  .nav:hover{
+    color: gold;
+    cursor: pointer;
   }
 
-  NavLink{
+  .right{
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  
+
+  /* NavLink{
       display: flex;
-      flex-flow: row;
+      flex-flow: column;
       word-spacing: 5rem;
-      font: 2rem;
+      font-size: 1.5rem;
       font-weight: bold;
-      
-  }
+      color: green;
+  } */
