--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,9 @@ body {
     margin: 0;
     padding: 0;
     font-family:  sans-serif;
-    background-size: 100%;
+    background-size: 90%;
     background-position: bottom;
-    background-color: #95e8f3
+    /* background-color: #95e8f3 */
   
 }
 
